centre align .survey-body, fixes #4

--- a/src/App.css
+++ b/src/App.css
@@ -34,8 +34,8 @@
 }
 
 .survey-body {
-  margin: 0 5em;
-  max-width: 900px;
+  max-width: 960px;
+  margin: 0 auto;
 }
 
 /* List formatting */
